--- a/client/main.css
+++ b/client/main.css
@@ -9688,6 +9688,152 @@ label {
     text-transform: capitalize;
 }
 
+.normal { 
+  background: #A8A878;
+  border: 2px solid #C6C6A7;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.fire { 
+  background: #F08030;
+  border: 1px solid #9C531F;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.fighting {
+    background: #C03028;
+    border: 1px solid #7D1F1A;
+    color: white;
+    text-align: center;
+    border-radius: 50px;
+    padding: 5px;
+}	
+.water {
+  background: #6890F0;
+  border: 1px solid #445E9C;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}	
+.flying {
+  background: #A890F0;
+  border: 1px solid #6D5E9C;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.grass {
+  background: #78C850;
+  border: 1px solid #4E8234;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.poison {
+  background: #A040A0;
+  border: 1px solid #682A68;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.electric {
+  background: #F8D030;
+  border: 1px solid #A1871F;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.ground {
+  background: #E0C068;
+  border: 1px solid #927D44;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.psychic {
+  background: #E0C068;
+  border: 1px solid #927D44;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.rock {
+  background: #B8A038;
+  border: 1px solid #786824;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.ice {
+  background: #98D8D8;
+  border: 1px solid #638D8D;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.bug {
+  background: #A8B820;
+  border: 1px solid #6D7815;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.dragon {
+  background: #7038F8;
+  border: 1px solid #4924A1;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.ghost { 
+  background: #705898;
+  border: 1px solid #493963;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.dark {
+  background: #705848;
+  border: 1px solid #49392F;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.steel {
+  background: #B8B8D0;
+  border: 1px solid #787887;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+.fairy {
+  background: #EE99AC;
+  border: 1px solid #9B6470;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+  padding: 5px;
+}
+
+
 
 /* Safari */
 @-webkit-keyframes spin {
