update colour for psychic type

--- a/client/main.css
+++ b/client/main.css
@@ -9761,8 +9761,8 @@ label {
   padding: 5px;
 }
 .psychic {
-  background: #E0C068;
-  border: 1px solid #927D44;
+  background: #F85888;
+  border: 1px solid #A13959;
   color: white;
   text-align: center;
   border-radius: 50px;
