make sprites enlarge when hovering

--- a/client/main.css
+++ b/client/main.css
@@ -220,6 +220,13 @@ img {
   vertical-align: middle;
   border-style: none;
 }
+.imgSprite{ 
+  vertical-align: middle;
+  border-style: none;
+}
+.imgSprite:hover{ 
+  transform: scale(1.2);
+}
 
 svg {
   overflow: hidden;
